--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me</h2>
-								<p>I am currently a student at Rutgers University-New Brunswick majoring in Computer Science and Data Science.<br />
+								<p>I am currently a junior at Rutgers University-New Brunswick majoring in Computer Science and Data Science.<br />
 								Throughout high school and college, I have developed a passion for coding and solving real-world problems. I am looking to improve my skill set through more personal projects and professional experience.</p>
 							</header>
 							<!-- <ul class="icons major">
@@ -92,7 +92,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2><a href="https://github.com/nikhiljadav/IncomeExpenseTracker">Financial Tracker</a>
-								</h2>MongoDB, Express.js, React, Node.js Stack, HTML, JavaScript, CSS</h2>
+								</h2>MongoDB, Express.js, React, Node.js, HTML, JavaScript, CSS</h2>
 								<p> </p>
 								<p>A react application that allows users to log their incomes and expenses to view trends in their total balance. Uses the MERN stack to create an efficient backend and responsive frontend user experience.</p>
 							</div>
