Add AWS Certification
adds section for certifications and includes link to AWS Certification

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<p>Software Developer<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="https://nikhiljadav.tiiny.site/" class="button primary">My Resume</a></li>
+								<li><a href="https://nikhiljadav.tiiny.site" class="button primary">My Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More About Me</a>
@@ -76,6 +76,10 @@
 							<li>
 								<h3>Frameworks and Technology</h3>
 								<p>Django, React, Node.js, Express.js, MongoDB, Android Studio, Git/GitHub, AWS, Microsoft Azure</p>
+							</li>
+							<li>
+								<h3>Certifications</h3>
+								<p><a href="https://www.credly.com/badges/f07a90de-7a8a-476d-b5e3-e5520f80241b/linked_in_profile">AWS Certified Cloud Practitioner</a></p>
 							</li>
 						</ul>
 					</div>
